# claude-code-desktop

./: .gitignore  CLAUDE.md  README.md  USER_MANUAL.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  git.rs  lib.rs  pty.rs
src/components/: AiChatPanel.tsx  Artifacts.tsx  BottomInputBar.tsx  BottomPanel.tsx  CallChain.tsx  CenterEditor.tsx  ChangePanel.tsx  ChatPanel.tsx  DiffModal.tsx  FileExplorer.tsx  Layout.tsx  LeftSidebar.tsx  MarkdownRenderer.tsx  Outline.tsx  RightSidebar.tsx  Sidebar.tsx  StatusBar.tsx  TaskList.tsx  TerminalPanel.tsx  Timeline.tsx  TopBar.tsx
src/components/ui/: toast.tsx
src/hooks/: useChatStream.ts
src/pages/: ConfigEditor.tsx  DiffViewer.tsx  Home.tsx  Projects.tsx  Sessions.tsx  Settings.tsx  TerminalPanel.tsx
